--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/stuffed_peppers.html">Stuffed Peppers</a>
+    <h5>Links</h5>
+    <ul>
+        <li><a href="./recipes/stuffed_peppers.html">Stuffed Peppers</a></li>
+        <li><a href="./recipes/fancy_ramen.html">Fancy Ramen</a></li>
+        
+    </ul>
+    
 </body>
 </html>
