--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <ul>
         <li><a href="./recipes/stuffed_peppers.html">Stuffed Peppers</a></li>
         <li><a href="./recipes/fancy_ramen.html">Fancy Ramen</a></li>
-        
+        <li><a href="./recipes/ice.html">Ice</a></li>
     </ul>
     
 </body>
