--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <h5>Links</h5>
+    <h5 id="link-list">Links</h5>
     <ul>
         <li><a href="./recipes/stuffed_peppers.html">Stuffed Peppers</a></li>
         <li><a href="./recipes/fancy_ramen.html">Fancy Ramen</a></li>
